# msg-tool

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  check_features.py  private.toml
.github/workflows/: CI.yml  github-pages.yml  release.yml
msg_tool_build/: Cargo.toml
msg_tool_build/src/: kr_arc.rs  lib.rs  simple_pack.rs
msg_tool_macro/: Cargo.toml
msg_tool_macro/src/: lib.rs
msg_tool_xp3data/: Cargo.toml  build.rs  crypt.json  lib.rs
msg_tool_xp3data/name_list/: rhapsody.lst
src/: args.rs  lib.rs  main.rs  types.rs
src/ext/: atomic.rs  fancy_regex.rs  io.rs  mod.rs  mutex.rs  path.rs  psb.rs  rcdom.rs  vec.rs
src/format/: fixed.rs  mod.rs
src/output_scripts/: m3t.rs  mod.rs  po.rs
src/scripts/: base.rs  mod.rs
src/scripts/artemis/: asb.rs  mod.rs  txt.rs
src/scripts/artemis/archive/: mod.rs  pf2.rs  pfs.rs
src/scripts/artemis/ast/: dump.rs  mod.rs  parser.rs  text.rs  types.rs
src/scripts/artemis/panmimisoft/: mod.rs  txt.rs
src/scripts/bgi/: bp.rs  bsi.rs  mod.rs  parser.rs  script.rs
src/scripts/bgi/archive/: bse.rs  dsc.rs  mod.rs  v1.rs  v2.rs
src/scripts/bgi/audio/: audio.rs  mod.rs
src/scripts/bgi/image/: cbg.rs  img.rs  mod.rs
src/scripts/cat_system/: cst.rs  cstl.rs  mod.rs
src/scripts/cat_system/archive/: int.rs  int_password.rs  mod.rs  twister.rs
src/scripts/cat_system/image/: hg3.rs  mod.rs
src/scripts/circus/: info.rs  mod.rs  script.rs
src/scripts/circus/archive/: crm.rs  dat.rs  mod.rs  pck.rs
src/scripts/circus/audio/: mod.rs  pcm.rs
src/scripts/circus/image/: crx.rs  crxd.rs  mod.rs
src/scripts/emote/: dref.rs  mod.rs  pimg.rs  psb.rs  rle.rs
src/scripts/entis_gls/: mod.rs  srcxml.rs
src/scripts/entis_gls/csx/: base.rs  mod.rs
src/scripts/entis_gls/csx/v1/: disasm.rs  img.rs  mod.rs  types.rs
src/scripts/entis_gls/csx/v2/: disasm.rs  img.rs  mod.rs  types.rs
src/scripts/escude/: archive.rs  crypto.rs  list.rs  lzw.rs  mod.rs  script.rs
src/scripts/escude/ops/: base.rs  hanaou.rs  mod.rs  panicon.rs
src/scripts/ex_hibit/: mod.rs  rld.rs
src/scripts/ex_hibit/arc/: grp.rs  mod.rs
src/scripts/favorite/: disasm.rs  hcb.rs  mod.rs
src/scripts/hexen_haus/: bin.rs  mod.rs
src/scripts/hexen_haus/archive/: arcc.rs  mod.rs  odio.rs  wag.rs
src/scripts/hexen_haus/img/: png.rs
src/scripts/kirikiri/: ks.rs  mdf.rs  mod.rs  scn.rs  simple_crypt.rs  tjs2.rs  tjs_ns0.rs
src/scripts/kirikiri/archive/: mod.rs  xp3.rs
src/scripts/kirikiri/archive/xp3/: archive.rs  consts.rs  crypt.json  crypt.rs  mod.rs  pe.rs  read.rs  reader.rs  segmenter.rs  writer.rs
src/scripts/kirikiri/archive/xp3/crypt/: chain_reaction.rs  cx.rs  cz.rs  mod.rs
src/scripts/kirikiri/archive/xp3pack/: archive.rs  consts.rs  mod.rs  reader.rs  segmenter.rs  writer.rs
src/scripts/kirikiri/image/: dref.rs  mod.rs  pimg.rs  tlg.rs
src/scripts/musica/: mod.rs  sc.rs
src/scripts/musica/archive/: mod.rs  paz.json  paz.rs
src/scripts/qlie/: mod.rs  script.rs
src/scripts/qlie/archive/: mod.rs
src/scripts/qlie/archive/pack/: delphi.rs  encryption.rs  mod.rs  twister.rs  types.rs  v31.rs
src/scripts/qlie/image/: abmp10.rs  dpng.rs  mod.rs
src/scripts/silky/: disasm.rs  map.rs  mes.rs  mod.rs
src/scripts/softpal/: mod.rs
src/scripts/softpal/arc/: mod.rs  pac.rs
src/scripts/softpal/img/: mod.rs
src/scripts/softpal/img/pgd/: base.rs  ge.rs  mod.rs  pgd3.rs
src/scripts/softpal/scr/: disasm.rs  mod.rs
src/scripts/will_plus/: mod.rs  ws2.rs  ws2_disasm.rs
src/scripts/will_plus/img/: mod.rs  wip.rs
src/scripts/yaneurao/: mod.rs
src/scripts/yaneurao/itufuru/: archive.rs  crypto.rs  mod.rs  script.rs
src/scripts/yuris/: mod.rs  txt.rs  types.rs  yscfg.rs  yscm.rs  yser.rs  ystb.rs
src/utils/: bit_stream.rs  blowfish.rs  case_insensitive_string.rs  counter.rs  crc32.rs  encoding.rs  encoding_win.rs  escape.rs  files.rs  flac.rs  html5ever_arcdom.rs  img.rs  jxl.rs  lossless_audio.rs  lzss.rs  macros.rs  mmx.rs  mod.rs  name_replacement.rs  num_range.rs  pcm.rs  rc4.rs  serde_base64bytes.rs  simple_pack.rs  str.rs  struct_pack.rs  threadpool.rs  xored_stream.rs
src/utils/psd/: compression.rs  mod.rs  types.rs
