[package]
name = "msg_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blowfish = { version = "0.9", optional = true }
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
csv = "1.3"
emote-psb = { version = "0.5", optional = true }
encoding_rs = "0.8"
fancy-regex = { version = "0.14", optional = true }
flate2 = { version = "1.1", optional = true }
int-enum = { version = "1.2", optional = true }
json = { version = "0.12", optional = true }
lazy_static = "1.5.0"
libtlg-rs = { version = "0.1", optional = true }
memchr = { version = "2.7", optional = true }
msg_tool_macro = { path = "./msg_tool_macro" }
overf = "0.1"
png = { version = "0.17", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
unicode-segmentation = "1.12"
url = { version = "2.5", optional = true }
utf16string = "0.2"
zstd = { version = "0.13", optional = true }

[features]
default = ["artemis", "artemis-arc", "bgi", "bgi-arc", "bgi-img", "cat-system", "cat-system-arc", "cat-system-img", "circus", "circus-img", "escude", "escude-arc", "hexen-haus", "kirikiri", "kirikiri-img", "will-plus", "yaneurao", "yaneurao-itufuru"]
artemis = ["utils-escape"]
artemis-arc = ["artemis", "msg_tool_macro/artemis-arc", "sha1"]
bgi = []
bgi-arc = ["bgi", "rand", "utils-bit-stream"]
bgi-img = ["bgi", "image", "utils-bit-stream"]
cat-system = ["fancy-regex", "flate2", "int-enum"]
cat-system-arc = ["cat-system", "blowfish", "utils-crc32"]
cat-system-img = ["cat-system", "flate2", "image", "utils-bit-stream"]
circus = []
circus-img = ["circus", "image", "flate2", "zstd"]
escude = ["int-enum"]
escude-arc = ["escude", "rand", "utils-bit-stream"]
hexen-haus = ["memchr", "utils-str"]
kirikiri = ["emote-psb", "fancy-regex", "flate2", "json", "utils-escape"]
kirikiri-img = ["kirikiri", "emote-psb", "image", "libtlg-rs", "url"]
will-plus = ["utils-str"]
yaneurao = []
yaneurao-itufuru = ["yaneurao"]
# basic feature
image = ["png"]
# utils feature
utils-bit-stream = []
utils-crc32 = []
utils-escape = ["fancy-regex"]
utils-str = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0", features = ["Win32_Globalization", "Win32_System_Diagnostics_Debug"] }

[patch.crates-io]
blowfish = { git = "https://github.com/lifegpc/block-ciphers.git", branch = "blowfish" }
