[package]
name = "msg_tool"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/lifegpc/msg-tool"
description = "A command-line tool for exporting, importing, packing, and unpacking script files."
license = "MIT"
exclude = [".github", "*.py"]

[dependencies]
anyhow = "1"
byteorder = { version = "1.5", default-features = false, optional = true}
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
csv = "1.3"
ctrlc = "3.4"
emote-psb = { version = "0.5", optional = true , features = ["serde"] }
encoding_rs = "0.8"
fancy-regex = { version = "0.16", optional = true }
flate2 = { version = "1.1", optional = true }
int-enum = { version = "1.2", optional = true }
json = { version = "0.12", optional = true }
lazy_static = "1.5.0"
libtlg-rs = { version = "0.1", optional = true }
markup5ever = { version = "0.35", optional = true }
markup5ever_rcdom = { version = "0.35", optional = true }
memchr = { version = "2.7", optional = true }
mozjpeg = { version = "0.10", optional = true }
msg_tool_macro = { version = "0.1.0" }
overf = "0.1"
png = { version = "0.17", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha1 = { version = "0.10", optional = true }
unicode-segmentation = "1.12"
url = { version = "2.5", optional = true }
utf16string = "0.2"
webp = { version = "0.3", default-features = false, optional = true }
xml5ever = { version = "0.35", optional = true }
zstd = { version = "0.13", optional = true }

[features]
default = ["all-fmt", "image-jpg", "image-webp"]
all-fmt = ["all-script", "all-img", "all-arc", "all-audio"]
all-script = ["artemis", "bgi", "cat-system", "circus", "entis-gls", "escude", "ex-hibit", "hexen-haus", "kirikiri", "will-plus", "yaneurao", "yaneurao-itufuru"]
all-img = ["bgi-img", "cat-system-img", "circus-img", "kirikiri-img"]
all-arc = ["artemis-arc", "bgi-arc", "cat-system-arc", "circus-arc", "escude-arc"]
all-audio = ["bgi-audio", "circus-audio"]
artemis = ["utils-escape"]
artemis-arc = ["artemis", "msg_tool_macro/artemis-arc", "sha1"]
bgi = ["fancy-regex"]
bgi-arc = ["bgi", "rand", "utils-bit-stream"]
bgi-audio = ["bgi"]
bgi-img = ["bgi", "image", "rand", "utils-bit-stream"]
cat-system = ["fancy-regex", "flate2", "int-enum"]
cat-system-arc = ["cat-system", "utils-blowfish", "utils-crc32"]
cat-system-img = ["cat-system", "flate2", "image", "utils-bit-stream"]
circus = []
circus-arc = ["circus"]
circus-audio = ["circus", "flate2", "int-enum", "utils-pcm"]
circus-img = ["circus", "image", "flate2", "zstd"]
entis-gls = ["xml5ever", "markup5ever", "markup5ever_rcdom"]
escude = ["int-enum"]
escude-arc = ["escude", "rand", "utils-bit-stream"]
ex-hibit = []
hexen-haus = ["memchr", "utils-str"]
kirikiri = ["emote-psb", "fancy-regex", "flate2", "json", "utils-escape"]
kirikiri-img = ["kirikiri", "emote-psb", "image", "libtlg-rs", "url"]
will-plus = ["utils-str"]
yaneurao = []
yaneurao-itufuru = ["yaneurao"]
# basic feature
image = ["png"]
image-jpg = ["mozjpeg"]
image-webp = ["webp"]
# utils feature
utils-bit-stream = []
utils-blowfish = ["byteorder"]
utils-crc32 = []
utils-escape = ["fancy-regex"]
utils-pcm = []
utils-str = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0", features = ["Win32_Globalization", "Win32_System_Diagnostics_Debug"] }
