[package]
name = "msg_tool_macro"
version = "0.1.6"
edition = "2024"
repository = "https://github.com/lifegpc/msg-tool"
description = "A procedural macro for the msg-tool project."
license = "MIT"

[lib]
proc-macro = true

[features]
artemis-arc = []
unstable = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"

[package.metadata.docs.rs]
all-features = true
