[package]
name = "msg_tool_macro"
version = "0.2.12"
edition = "2024"
repository = "https://github.com/lifegpc/msg-tool"
description = "A procedural macro for the msg-tool project."
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[features]
artemis-arc = []
unstable = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"

[package.metadata.docs.rs]
all-features = true
