[package]
name = "msg_tool_xp3data"
version = "0.4.0-alpha.1"
edition = "2024"
repository = "https://github.com/lifegpc/msg-tool"
description = "XP3 data for the msg-tool project."
license = "GPL-3.0-or-later"

[lib]
path = "lib.rs"

[dependencies]
zstd = "0.13"

[features]
unstable = ["msg_tool_build/unstable"]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
msg_tool_build = { path = "../msg_tool_build", features = ["kirikiri-arc"] }
